chore: add comment for future infobar updates
Added an informational comment to the `InfoBar` in `StoragePage.xaml` to indicate it should be replaced once the UI/UX design is finalized.

--- a/src/gui4/windows/kDrive client/kDrive client/Pages/StoragePage.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/Pages/StoragePage.xaml
@@ -56,6 +56,7 @@
                  IsClosable="False"
                  Message="{x:Bind PageViewModel.DiskRoot, Mode=OneWay}"
                  Visibility="{x:Bind PageViewModel.IsDiskConnected, Mode=OneWay, Converter={StaticResource BooleanToInvertedVisibilityConverter}}">
+            <!-- TODO: Replace this infobar once the page is ready on the UI/UX side-->
             <InfoBar.ActionButton>
                 <Button Content="Réessayer"
                         Click="RetryButton_click"
