--- a/src/gui4/windows/kDrive client/kDrive client/CustomControls/ErrorItem.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/CustomControls/ErrorItem.xaml
@@ -52,7 +52,7 @@
                        Grid.Row="1"
                        Text="{x:Bind Error.HowToSolve, Mode=OneWay}"
                        VerticalAlignment="Center"
-                       Style="{StaticResource Infomaniak.Style.TextBlock.CaptionStrong}"
+                       Style="{StaticResource Infomaniak.Style.TextBlock.CaptionSb}"
                        Margin="0,0,0,2"
                        Foreground="#666666" />
 
