--- a/src/gui4/windows/kDrive client/kDrive client/CustomControls/ErrorItem.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/CustomControls/ErrorItem.xaml
@@ -12,7 +12,7 @@
     <UserControl.Resources>
         <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         <converters:BooleanToInvertedVisibilityConverter  x:Key="BooleanToInvertedVisibilityConverter" />
-        <converters:NodeTypeToSvgUriConverter x:Key="NodeTypeToSvgUriConverter" />
+        <converters:ItemTypeToIconConverter x:Key="NodeTypeToSvgUriConverter" />
         <converters:StringPathToFileNameConverter x:Key="StringPathToFileNameConverter" />
         <converters:DateTimeToTimeAgoConverter x:Key="DateTimeToTimeAgoConverter" />
     </UserControl.Resources>
