--- a/src/gui4/windows/kDrive client/kDrive client/Styles/InfomaniakStyles.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/Styles/InfomaniakStyles.xaml
@@ -72,10 +72,16 @@
     <Thickness x:Key="Infomaniak.Style.Thickness.Uniform.XL">32</Thickness>
     <Thickness x:Key="Infomaniak.Style.Thickness.Uniform.XXL">36</Thickness>
 
+    <Thickness x:Key="Infomaniak.Style.Thickness.Sides.Horizontal.XXS">4,0</Thickness>
     <Thickness x:Key="Infomaniak.Style.Thickness.Sides.Horizontal.XS">8,0</Thickness>
     <Thickness x:Key="Infomaniak.Style.Thickness.Sides.Horizontal.S">12,0</Thickness>
     <Thickness x:Key="Infomaniak.Style.Thickness.Sides.Horizontal.M">16,0</Thickness>
 
+    <Thickness x:Key="Infomaniak.Style.Thickness.Sides.Vertical.XXS">0,4</Thickness>
+    <Thickness x:Key="Infomaniak.Style.Thickness.Sides.Vertical.XS">0,8</Thickness>
+    <Thickness x:Key="Infomaniak.Style.Thickness.Sides.Vertical.S">0,12</Thickness>
+    <Thickness x:Key="Infomaniak.Style.Thickness.Sides.Vertical.M">0,16</Thickness>
+    
     <Thickness x:Key="Infomaniak.Style.Thickness.Top.XXS">0,4,0,0</Thickness>
     <Thickness x:Key="Infomaniak.Style.Thickness.Top.XS">0,8,0,0</Thickness>
     <Thickness x:Key="Infomaniak.Style.Thickness.Top.S">0,12,0,0</Thickness>
