fix(Activity page winui3): Adress PR comments (minor chnages)

--- a/src/gui4/windows/kDrive client/kDrive client/CustomControls/SyncActivityTable.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/CustomControls/SyncActivityTable.xaml
@@ -11,7 +11,7 @@
     <UserControl.Resources>
         <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         <converters:BooleanToInvertedVisibilityConverter  x:Key="BooleanToInvertedVisibilityConverter" />
-        <converters:ItemTypeToIconConverter x:Key="NodeTypeToSvgUriConverter" />
+        <converters:NodeTypeToIconConverter x:Key="NodeTypeToSvgUriConverter" />
         <converters:StringPathToFileNameConverter x:Key="StringPathToFileNameConverter" />
         <converters:DateTimeToTimeAgoConverter x:Key="DateTimeToTimeAgoConverter" />
         <converters:BytesToHumanReadableStringConverter x:Key="BytesToHumanReadableStringConverter" />
