--- a/src/gui4/windows/kDrive client/kDrive client/CustomControls/QuickAccess.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/CustomControls/QuickAccess.xaml
@@ -35,7 +35,9 @@
                             Background="{ThemeResource AcrylicInAppFillColorDefaultBrush}"
                             CornerRadius="100"
                             Padding="{StaticResource Infomaniak.Style.Thickness.Uniform.XXS}">
-                        <controls:DriveIcon IconColor="{x:Bind ViewModel.SelectedSync.Drive.Color, Mode=OneWay}" />
+                        <Viewbox>
+                            <controls:DriveIcon IconColor="{x:Bind ViewModel.SelectedSync.Drive.Color, Mode=OneWay}" />
+                        </Viewbox>
                     </Border>
 
                 </Canvas>
